<resources>
    <string name="app_name">Fiscalizacao</string>
    <string name="os_activity">Ordem de Serviço</string>
    <string name="image_description">Equipe Fiscalizacao</string>
    <string name="novo">Novo</string>
    <string name="atualiza">Atualiza</string>
    <string name="deleta">Deleta</string>
    <string name="anyataylorjoy_description">Anya Taylor Joy</string>
    <string name="fiscalservico">Fiscal de Serviço</string>
    <string name="os">OS</string>
    <string name="contrato">Contrato</string>
    <string name="empresa">Empresa</string>
    <string name="lixo">LixoLixoLixo</string>
    <string name="analisada">analisada</string>
    <string name="fiscalizada">fiscalizada</string>
    <string name="altera_qtde">qtde</string>
    <string name="save_img">icone salvar</string>

    <string name="tot_os">preco total OS</string>

    <string name="cod_item">cod. item</string>
    <string name="descr_item">descricao</string>
    <string name="quant_item">quant.</string>
    <string name="unidade">unidade</string>
    <string name="punit_item">preco unitario</string>
    <string name="ptot_item">preco total</string>
    <string name="dar_conformidade">Finalizar</string>

</resources>