<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardviewOs"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="2dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/os"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textOs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/titleos"
            android:text="20004658"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/titleContract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleos"
            android:layout_marginStart="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2dp"
            android:text="@string/contrato"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textContrato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textOs"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2dp"
            android:layout_toEndOf="@+id/titleContract"
            android:text="202074211356"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/checkAnalisada"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="18dp"
            android:text="@string/analisada"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/checkFiscalizada"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_below="@+id/checkAnalisada"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="11dp"
            android:text="@string/fiscalizada"
            android:textSize="14sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
