<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_column="100">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2sp">

        <TextView
            android:id="@+id/cod_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4sp"
            android:layout_marginTop="2dp"
            android:text="@string/cod_item"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/descr_item"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4sp"
            android:layout_marginTop="2sp"
            android:text="@string/descr_item"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="start|center"
            app:layout_constraintStart_toEndOf="@+id/cod_item"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tit_qtde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4sp"
            android:layout_marginTop="4sp"
            android:textSize="12sp"
            android:text="@string/quant_item"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cod_item" />

        <TextView
            android:id="@+id/tit_unidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14sp"
            android:layout_marginTop="4sp"
            android:textSize="12sp"
            android:text="@string/unidade"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/qtde_item"
            app:layout_constraintTop_toBottomOf="@+id/descr_item" />

        <TextView
            android:id="@+id/tit_pr_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="4sp"
            android:textSize="12sp"
            android:text="@string/punit_item"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@+id/tit_unidade"
            app:layout_constraintTop_toBottomOf="@+id/descr_item" />

        <TextView
            android:id="@+id/tit_pr_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="4sp"
            android:gravity="center"
            android:text="@string/ptot_item"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/tit_pr_unit"
            app:layout_constraintTop_toBottomOf="@+id/descr_item" />

        <EditText
            android:id="@+id/qtde_item"
            android:layout_width="60sp"
            android:layout_height="40sp"
            android:layout_marginStart="4sp"
            android:layout_marginTop="4sp"
            android:gravity="start|center"
            android:inputType="number"
            android:padding="4sp"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tit_qtde" />

        <TextView
            android:id="@+id/unidade_item"
            android:layout_width="40sp"
            android:layout_height="30sp"
            android:layout_marginStart="14sp"
            android:layout_marginTop="4sp"
            android:textSize="10sp"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/qtde_item"
            app:layout_constraintTop_toBottomOf="@+id/tit_unidade" />

        <TextView
            android:id="@+id/punit_item"
            android:layout_width="90sp"
            android:layout_height="30sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4sp"
            android:textSize="10sp"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@+id/unidade_item"
            app:layout_constraintTop_toBottomOf="@id/tit_pr_unit" />

        <TextView
            android:id="@+id/ptotal_item"
            android:layout_width="90sp"
            android:layout_height="30sp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="4sp"
            android:gravity="center"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/punit_item"
            app:layout_constraintTop_toBottomOf="@id/tit_pr_total" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>